--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,65 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>975</width>
-    <height>608</height>
+    <width>281</width>
+    <height>396</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QTableWidget" name="tableWidget">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>120</y>
-      <width>611</width>
-      <height>431</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QTableWidget" name="tableWidget_2">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>120</y>
-      <width>321</width>
-      <height>431</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>100</y>
-      <width>47</width>
-      <height>13</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Wyniki</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>100</y>
-      <width>81</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Twoje zajęcia</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="Apply_for_Event_PB">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>20</y>
+      <x>50</x>
+      <y>130</y>
       <width>171</width>
       <height>71</height>
      </rect>
@@ -81,8 +35,8 @@
    <widget class="QPushButton" name="Log_out_PB">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
+      <x>200</x>
+      <y>320</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -91,13 +45,78 @@
      <string>Wyloguj</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="ShowEvents_PB">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>40</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Obecność na zajęciach</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>290</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Nr Karty</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Login_Label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>310</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>LOGIN_DEBUG</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="isAdmin_Laber">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>330</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>ADMINISTRATOR</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="Add_new_Events_PB">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>80</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Nowe zajęcia</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>975</width>
+     <width>281</width>
      <height>21</height>
     </rect>
    </property>
