Viewing events now ready. Waiting for SQL implementation

--- a/show_events_dialog.ui
+++ b/show_events_dialog.ui
@@ -1,17 +1,41 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>Show_Events_Dialog</class>
- <widget name="Show_Events_Dialog" class="QDialog">
+ <widget class="QDialog" name="Show_Events_Dialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>495</width>
+    <height>323</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <widget class="QPushButton" name="End_Dialog_PB">
+   <property name="geometry">
+    <rect>
+     <x>210</x>
+     <y>290</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Zakończ</string>
+   </property>
+  </widget>
+  <widget class="QTableWidget" name="EventsTable">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>20</y>
+     <width>471</width>
+     <height>261</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
