search and signup now ready (i think)

--- a/signup_for_event_dialog.ui
+++ b/signup_for_event_dialog.ui
@@ -36,7 +36,7 @@
     <string>Zakończ</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="Signup_PB">
    <property name="geometry">
     <rect>
      <x>420</x>
