--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -110,6 +110,19 @@
      <string>Nowe zajęcia</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="Add_presence_PB">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>180</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Dodaj obecnosć</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
