Finished without debug fill
Ready for SQL magic

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -123,6 +123,58 @@
      <string>Dodaj obecnosć</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="RAP_events_PB">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>100</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Zajęcia</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="RAP_coaches_PB">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>130</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Trenerzy</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="RAP_FITMASTER_PB">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>160</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Firma</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>80</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Raporty</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
