--- a/stats_events_dialog.ui
+++ b/stats_events_dialog.ui
@@ -1,17 +1,28 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>STATS_Events_dialog</class>
- <widget name="STATS_Events_dialog" class="QDialog">
+ <widget class="QDialog" name="STATS_Events_dialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>560</width>
+    <height>322</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <widget class="QTableWidget" name="tableWidget">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>10</y>
+     <width>551</width>
+     <height>301</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
