--- a/stats_fitmaster_dialog.ui
+++ b/stats_fitmaster_dialog.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>STATS_Coach</class>
- <widget class="QDialog" name="STATS_Coach">
+ <class>STATS_FitMaster_dialog</class>
+ <widget class="QDialog" name="STATS_FitMaster_dialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>566</width>
-    <height>316</height>
+    <width>569</width>
+    <height>317</height>
    </rect>
   </property>
   <property name="windowTitle">
