--- a/add_presence_dialog.ui
+++ b/add_presence_dialog.ui
@@ -115,9 +115,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>90</y>
+     <y>121</y>
      <width>256</width>
-     <height>192</height>
+     <height>161</height>
     </rect>
    </property>
   </widget>
@@ -126,6 +126,16 @@
     <rect>
      <x>10</x>
      <y>60</y>
+     <width>251</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="Data_CB">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>90</y>
      <width>251</width>
      <height>22</height>
     </rect>
